# pg_engine

./: .editorconfig  .gitignore  .ruff.toml  README.md  pyproject.toml  readthedocs.yaml
.github/workflows/: publish.yml
docs/: pg_engine.rst  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  index.rst  quickstart.rst  terms.rst
docs/source/api/: modules.rst  pg_engine.api.rst  pg_engine.base_scripts.rst  pg_engine.components.rst  pg_engine.core.bases.rst  pg_engine.core.loaders.rst  pg_engine.core.processors.rst  pg_engine.core.rst  pg_engine.gui_extensions.ext_dummy.rst  pg_engine.gui_extensions.ext_pygame_gui.rst  pg_engine.gui_extensions.rst  pg_engine.logging.rst  pg_engine.rst  pg_engine.systems.rst
docs/source/programming/: components.rst  scripts.rst
docs/source/quickstart/: configuration_display.rst  configuration_instance.rst  configuration_objects.rst  configuration_root.rst  configuration_running.rst  configuration_scripts.rst  configuration_sprites.rst  configuration_ui.rst
docs/source/terms/: engine_vars.rst  loading.rst  registries.rst  singletons.rst  yaml_constructors.rst
example/quickstart_example/: main.py
example/quickstart_example/config/: config.yml  display.yml  game.yml  gameobjects.yml  ref.yml  sprites.yml  ui.yml
example/quickstart_example/gameobjects/: simple_gameobject.yml
example/quickstart_example/scripts/: move_script.py
src/pg_engine/: __init__.py  utils.py
src/pg_engine/api/: __init__.py  interface_builder.py  interface_builder_gameobject.py  interface_builder_scene.py  interface_camera.py  registry.py  (+27 more)
(+61 files in other folders)
